--- a/src/app/components/forms/edit-user-form/edit-user-form.component.scss
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.scss
@@ -66,5 +66,11 @@ mat-form-field {
 }
 
 .save-button, .cancel-button {
-      float:right;
+  float:right;
 }
+
+.default-floor-text {
+flex-wrap: wrap;
+width: 240px;
+}
+
