--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,12 @@
-.example-viewport {
+.message-viewport {
   height: 300px;
-  width: 600px;
-  border: 1px solid black;
+  width: 500px;
+  border: 1px solid #008CBA;
+  border-radius: 5px;
+  margin: 80px;
 }
 
-.example-item {
+.message-item {
   height: 50px;
+  flex-wrap: wrap;
 }
