--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -3,9 +3,9 @@ div {
 }
 
 .room {
-  border: 2px solid rgb(175, 169, 169);
-  padding: 10px 10px 10px 10px;
-  margin: 20px 20px 20px 20px;
+  border: 1px solid #008cba;
+  padding: 25px;
+  margin: 20px;
 }
 
 ::ng-deep .one-day-selector {
@@ -62,9 +62,9 @@ img {
 }
 
 .book-button:disabled {
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
+  color: rgb(58, 57, 57);
+  background-color: rgb(244, 244, 244);
+  border: 1px solid #b6b2b24b;
   cursor: not-allowed;
 }
 
@@ -78,4 +78,39 @@ img {
 .book-button:active,
 .cancel-button:active {
   transform: translateY(3px);
+}
+
+.change-button {
+  border-radius: 5px;
+  color: rgb(58, 57, 57);
+  background-color: rgb(244, 244, 244);
+  border: 1px solid #b6b2b24b;
+  font-size: small;
+  margin-left: 20px;
+  display: inline-block;
+  text-align: right;
+}
+
+.change-button:hover {
+  background-color: #008cba;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.change-button:active {
+  transform: translateY(2px);
+}
+
+.current-floor {
+  margin: 20px 0px 0px 0px;
+  text-align: right;
+  font-size: smaller;
+  line-height: 60%;
+  display: flex;
+  flex: right;
+}
+
+.floor-text {
+  width: 90%;
 }
