--- a/src/app/components/forms/select-floor/select-floor.component.html
+++ b/src/app/components/forms/select-floor/select-floor.component.html
@@ -8,7 +8,7 @@
   <mat-select formControlName="floor" [(value)]="currentFloor" (selectionChange)="changeCurrentFloor()">
     <div *ngIf="!isAddNewUserForm">
       <mat-option *ngFor="let floorOption of currentFloors!" [value]="floorOption"
-                  [disabled]="department! !== floorOption.department || department !== 'JOINED'">{{floorOption.floorName}}</mat-option>
+                  [disabled]="department! !== floorOption.department">{{floorOption.floorName}}</mat-option>
     </div>
 
     <div *ngIf="isAddNewUserForm">
