--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -2,7 +2,7 @@
 <app-calendar></app-calendar>
 </div>
 <div class="reservation-history-table" fxFlex fxLayout="column" fxLayoutAlign="space-between stretch">
-    <h2>My desk boking history</h2>
+    <h2>My desk booking history</h2>
 
     <table mat-table [dataSource]="history">
 
