--- a/src/app/components/forms/edit-user-form/edit-user-form.component.html
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.html
@@ -90,7 +90,7 @@
           building {{currentFloor?.buildingName}}</p>
         <button class="select-floor-button" mat-button (click)="changeFloorDialog()">
           <p [hidden]="floorIsPresent">Select floor</p>
-          <p [hidden]="!floorIsPresent">Change floor</p>
+          <p class="change-floor" [hidden]="!floorIsPresent">Change floor</p>
         </button>
       </div>
 
