--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
                         </div>
                     </div>
                 </div>
-                <button mat-button (click)="changePassword()">Change password</button>
+                <button mat-button [routerLink]="'/account'">My Account</button>
                 <button class="logout-button" mat-raised-button (click)="logout()">LOGOUT</button>
             </ul>
         </nav>
