--- a/src/app/components/forms/edit-user-form/edit-user-form.component.scss
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.scss
@@ -5,6 +5,7 @@ button {
   border: 1px solid #9999994b;
   box-shadow: 0 4px 10px -6px #222;
   text-align: right;
+  width: fit-content;
 }
 
 button:hover {
