--- a/src/app/components/reservations/reservations.component.css
+++ b/src/app/components/reservations/reservations.component.css
@@ -62,8 +62,8 @@ img {
 }
 
 .book-button:disabled {
-  color: rgb(58, 57, 57);
-  background-color: rgb(244, 244, 244);
+  color: #3a3939;
+  background-color: #f4f4f4;
   border: 1px solid #b6b2b24b;
   cursor: not-allowed;
 }
@@ -71,8 +71,7 @@ img {
 .book-button:hover:enabled,
 .cancel-button:hover {
   border: 3px solid #1080a5b8;
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .book-button:active,
@@ -82,8 +81,8 @@ img {
 
 .change-button {
   border-radius: 5px;
-  color: rgb(58, 57, 57);
-  background-color: rgb(244, 244, 244);
+  color: #3a3939;
+  background-color: #f4f4f4;
   border: 1px solid #b6b2b24b;
   font-size: small;
   margin-left: 20px;
@@ -94,8 +93,7 @@ img {
 .change-button:hover {
   background-color: #008cba;
   color: white;
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .change-button:active {
@@ -114,7 +112,10 @@ img {
 .floor-text {
   width: 90%;
 }
+
 .testing::ng-deep {
   border: 2px solid green;
   border-radius: 5px;
 }
+
+/*# sourceMappingURL=reservations.component.css.map */
