--- a/src/app/components/forms/edit-user-form/edit-user-form.component.css
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.css
@@ -1,3 +1,88 @@
+button {
+  margin: 20px 10px 10px 10px;
+  font-size: medium;
+  border-radius: 5px;
+  border: 1px solid #9999994b;
+  box-shadow: 0 4px 10px -6px #222;
+  text-align: right;
+  width: fit-content;
+}
 
+button:hover {
+  border: 3px solid #1080a5b8;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+button:active {
+  transform: translateY(3px);
+}
+
+.generate-password-button {
+  border-radius: 5px;
+  color: #3a3939;
+  background-color: #f4f4f4;
+  border: 1px solid #b6b2b24b;
+  font-size: small;
+  margin-left: 20px;
+}
+
+.generate-password-button:hover {
+  background-color: #008cba;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.generate-password-button:active {
+  transform: translateY(2px);
+}
+
+.container {
+  padding: 20px 30px;
+  width: 500px;
+  flex-wrap: wrap;
+  border: 1px solid #008cba;
+}
+
+mat-form-field {
+  margin: 10px 30px 10px 20px;
+}
+
+.example-section {
+  margin-left: 20px;
+  width: fit-content;
+}
+
+.generated-password {
+  text-align: center;
+  margin: 10px 10px 10px 20px;
+  padding: 10px;
+  border: 1px solid #008cba;
+  border-radius: 5px;
+  color: black;
+  box-shadow: 0 4px 10px -6px #222;
+}
+
+.save-button, .cancel-button {
+  float: right;
+  margin-top: -30px;
+  background-color: #008cba;
+  color: white;
+}
+
+.default-floor-text {
+  flex-wrap: wrap;
+  width: 240px;
+}
+
+.select-floor-button {
+  width: auto;
+  margin-left: 280px;
+  margin-top: -80px;
+  height: 40px;
+}
+
+.change-floor {
+  padding-right: 170px;
+}
 
 /*# sourceMappingURL=edit-user-form.component.css.map */
