--- a/src/app/components/forms/edit-user-form/edit-user-form.component.scss
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.scss
@@ -56,6 +56,7 @@ mat-form-field {
 
 .generated-password {
   text-align: center;
+  width: 200px;
   margin: 10px 10px 10px 20px;
   padding: 10px;
   border: 1px solid #008cba;
@@ -72,8 +73,12 @@ mat-form-field {
 }
 
 .default-floor-text {
-flex-wrap: wrap;
-width: 240px;
+  flex-wrap: wrap;
+  width: 250px;
+  text-align: center;
+  border: 1px solid #008cba;
+  border-radius: 10px;
+  padding: 5px;
 }
 
 .select-floor-button {
