--- a/src/app/components/forms/add-desks-form/add-desks-form.component.html
+++ b/src/app/components/forms/add-desks-form/add-desks-form.component.html
@@ -1,7 +1,8 @@
 <mat-form-field>
-  <mat-label>Desk number</mat-label>
-  <input id="userid" [formControl]="deskName" matInput formControlName="userId">
-  <button class="save-button" mat-button (click)="addNewDesk()">add desk</button>
-  <button class="cancel-button" mat-button (click)="closeForm()">cancel</button>
+  <mat-label>Desk name</mat-label>
+  <input id="userid" [formControl]="deskName" matInput >
+
 </mat-form-field>
 
+<button class="save-button" mat-button (click)="addNewDesk()">add desk</button>
+<button class="cancel-button" mat-button (click)="closeForm()">cancel</button>
