--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="changePasswordForm">
     <mat-form-field>
       <mat-label>Current password</mat-label>
-      <input id="currentPassword" matInput formControlName="currentPassword">
+      <input type="password" id="currentPassword" matInput formControlName="currentPassword">
       <mat-error *ngIf="getCurrentPassword?.errors?.['required']">
         current password field is required
       </mat-error>
@@ -10,7 +10,7 @@
 
     <mat-form-field>
       <mat-label>New password</mat-label>
-      <input id="newPassword" matInput formControlName="newPassword">
+      <input type="password" id="newPassword" matInput formControlName="newPassword">
       <mat-error *ngIf="getNewPassword?.errors?.['required']">
         new password field is required
       </mat-error>
@@ -18,11 +18,16 @@
 
     <mat-form-field>
       <mat-label>Repeat new password</mat-label>
-      <input id="newPasswordRepeat" matInput formControlName="newPasswordRepeat">
+      <input type="password" id="newPasswordRepeat" matInput formControlName="newPasswordRepeat">
       <mat-error *ngIf="getNewPasswordRepeat?.errors?.['required']">
         current password repeat field is required
       </mat-error>
     </mat-form-field>
+  <div *ngIf="errorMessage">
+    <mat-error>
+      {{errorMessage}}
+    </mat-error>
+  </div>
 
    <button class="cancel-button" (click)="closeDialog()" mat-button>Cancel</button>
    <button class="save-button" (click)="changePasswordRequest()" mat-button>Change password</button>
