--- a/src/app/components/forms/select-floor/select-floor.component.html
+++ b/src/app/components/forms/select-floor/select-floor.component.html
@@ -16,7 +16,7 @@
     </div>
   </mat-select>
 
-  <button (click)="changeFloor()" mat-button>select</button>
+  <button (click)="changeFloor()" [disabled]="!selectFloorForm.valid" mat-button>select</button>
   <button (click)="closeForm()" mat-button>cancel</button>
 
 </form>
