--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -14,6 +14,9 @@
       <mat-error *ngIf="getNewPassword?.errors?.['required']">
         new password field is required
       </mat-error>
+      <mat-error *ngIf="getNewPassword?.errors?.['pattern']">
+        password must include lowercase latter, uppercase letter a number and a special character
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field>
