--- a/src/app/components/manage-desks/manage-desks.component.html
+++ b/src/app/components/manage-desks/manage-desks.component.html
@@ -64,6 +64,7 @@
     <button class="delete-button" (click)="deleteFloor(floor)">
       Delete floor
     </button>
+    <img class="floor-plan" [src]="getFloorPlan(floor)">
   </div>
   <button class="add-new-button" mat-button (click)="addNewFloor()">
     Add new floor
@@ -76,7 +77,7 @@
   <button class="add-new-button" (click)="display = Entities.BUILDINGS">
     Change building
   </button>
-  <button class="add-new-button" (click)="display = Entities.FLOORS">
+  <button class="add-new-button" (click)="reselectFloor()">
     Change floor
   </button>
   <div class="container-with-desks" *ngFor="let room of listOfRooms" [ngSwitch]="room === selectedRoom">
@@ -149,7 +150,7 @@
   </button>
 
 
-  <img [src]="getFloorPlan(selectedFloor!)">
-  <button (click)="changeFloorPlane()" mat-button>change image</button>
+  <img class="floor-plan" [src]="currentFloorPlan">
+  <button (click)="changeFloorPlan()" mat-button>change image</button>
 
 </ng-template>
