--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -12,7 +12,7 @@
         <th>Building
           <mat-form-field [style.width.px]="100">
             <mat-label>Building</mat-label>
-            <mat-select [formControl]="buildingSelect"  (selectionChange)="filterList()">
+            <mat-select [formControl]="buildingSelect" (selectionChange)="filterList()">
               <mat-option [value]="">all</mat-option>
               <mat-option *ngFor="let building of buildings" [value]="building">{{building.buildingName}}</mat-option>
             </mat-select>
@@ -24,7 +24,7 @@
       <th>Status
         <mat-form-field [style.width.px]="100">
           <mat-label>Status</mat-label>
-          <mat-select [formControl]="statusSelected"  (selectionChange)="filterList()">
+          <mat-select [formControl]="statusSelected" (selectionChange)="filterList()">
             <mat-option [value]="">ALL</mat-option>
             <mat-option [value]="'ACTIVE'">ACTIVE</mat-option>
             <mat-option [value]="'EXPIRED'">EXPIRED</mat-option>
@@ -38,11 +38,13 @@
       <tr *ngFor="let reservation of reservationsForDisplay">
         <td>{{reservation.date}}</td>
         <td>{{reservation.buildingName}}</td>
-
         <td>{{reservation.floorNumber}}</td>
         <td>{{reservation.roomName}}</td>
         <td>{{reservation.deskName}}</td>
-        <td (click)="cancelReservationById(reservation)">{{reservation.reservationStatus}}</td>
+        <td (click)="cancelReservationById(reservation)"
+            matTooltip="cancel reservation"
+            [matTooltipDisabled]="reservation.reservationStatus !== 'ACTIVE'"
+            class="{{reservation.reservationStatus}}">{{reservation.reservationStatus}}</td>
       </tr>
       </tbody>
     </table>
