--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,6 +27,7 @@
                 My bookings
               </button>
               <button mat-button (click)="changePassword()">Change password</button>
+              <button mat-button (click)="displayAccountInfo()">Account Info</button>
               <button mat-button
                 (click)="logout()">
                 LOG OUT
