--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -27,19 +27,13 @@
       <div class="room" *ngFor="let room of desksReservationsByDate">
         <h4>{{ room.roomName }}</h4>
         <div *ngFor="let desk of room.desks">
-          <mat-checkbox
-            matTooltip="{{getBookedDeskMessage(desk)}}"
-            [matTooltipDisabled]="desk.available"
-            [disabled]="true"
-            [ngClass]="{'testing' : desk.available}"
-            (mouseover)="displayReservationInfo = false; hoverId = desk.id"
-            (mouseout)="displayReservationInfo = true"
-            [checked]="desk.id == currentReservation?.deskId || desk.id == selected"
-            (click)="validateClick(desk);"
-            >{{ desk!.deskName }}</mat-checkbox>
-<!--          <div *ngIf="displayReservationInfo && desk.id == hoverId">-->
-<!--            {{ desk?.info?.userFirstName }}-->
-<!--          </div>-->
+          <button mat-stroked-button
+                  fxFlex
+                  [color]="desk.id == currentReservation?.deskId || desk.id == selected ? 'primary' : desk.available ? null : 'warn'"
+                  matTooltip="{{getBookedDeskMessage(desk)}}"
+                  [matTooltipDisabled]="desk.available"
+                  (click)="validateClick(desk);"
+          >{{desk.deskName}}</button>
         </div>
       </div>
       <button
